components/data-science-cluster-configuration/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dsc-tenant-ui-access
  namespace: redhat-ods-applications
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-minio-operator
  podSelector:
    matchLabels:
      app: minio
  policyTypes:
  - Ingress
